--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8">
       <title>InSIGHT VAC</title>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+      <link rel="icon" href="./assets/images/favicon_iv_01.png" type="image/png" sizes="16x16">
    <body>
       <header>
          <div class="container header--block">
